# dns-test

./: README.md  pyproject.toml
dns_test/: dns_query.py
